# RTDS-Server

./: .gitignore  CmdInterpreter.cpp  CmdInterpreter.h  Enums.h  Enums.hpp  LICENSE  Log.cpp  Log.h  Peer.cpp  Peer.h  README.md  RTDS-Server.sln  RTDS-Server.vcxproj  RTDS-Server.vcxproj.filters  RTDS.cpp  RTDS.h  SPentry.cpp  SPentry.h  Source.cpp  advanced_dll.h  cmd_element.cpp  cmd_element.h  cmd_interpreter.cpp  cmd_interpreter.h  common.hpp  directory.cpp  directory.h  entry.cpp  entry.h  log.cpp  log.h  logs.txt  mutable_data.cpp  mutable_data.h  notification.cpp  notification.h  peer.cpp  peer.h  rtds.cpp  rtds.h  (+7 more)
CMake/: CMakeLists.txt  CMakeSettings.json  bg_controller.cpp  bg_controller.h  cmd_processor.cpp  cmd_processor.h  common.h  log.cpp  log.h  message.cpp  message.h  peer.cpp  peer.h  rtds.cpp  rtds.h  sapair.h
CMake/include/: advanced_buffer.h  bg_controller.h  cmd_processor.h  common.h  common.h.in  log.h  message.h  peer.h  rtds.h  rtds_ccm.h  rtds_settings.h  sapair.h  ssl_ccm.h  ssl_peer.h  stream_peer.h  tcp_peer.h  udp_peer.h
CMake/src/: advanced_buffer.cpp  bg_controller.cpp  cmd_processor.cpp  log.cpp  main.cpp  message.cpp  peer.cpp  rtds.cpp  rtds_ccm.cpp  rtds_settings.cpp  sapair.cpp  ssl_ccm.cpp  ssl_peer.cpp  stream_peer.cpp  tcp_peer.cpp  udp_peer.cpp
License/: cppcodec LICENSE
RTDS draft/: Specifications.txt
